<resources>
    <string name="app_name">Parkir Yuk</string>
    <string name="versi">Versi 1.0.0</string>
    <string name="action_about">About</string>
    <string name="tahun">2016</string>
    <string name="nama">Wirya Ramadhan</string>
    <string name="dev">Developed by :</string>
    <string name="quote">&#34;Sistem Informasi Lokasi Parkir di DKI Jakarta Menggunakan LBS dan Google Maps API&#34;</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
</resources>
