<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:livebutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorIcons"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_logopy" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="true"
            android:src="@drawable/ic_city_bg"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/colorIcons"
            android:textSize="32sp"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versi"
            android:textColor="@color/colorIcons"
            android:id="@+id/textView"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            android:textColor="@color/colorIcons"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:textColor="@color/colorIcons"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/nama"
            android:textColor="@color/colorIcons"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/quote"
            android:textColor="@color/colorIcons"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView6" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="120dp"
            android:text="Website"
            android:autoLink="web"
            android:clickable="true"
            android:id="@+id/button_su"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryText"
            android:onClick="goToWeb"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"></Button>

        <Button
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:autoLink="web"
            android:cursorVisible="true"
            android:layout_width="120dp"
            android:id="@+id/button_so"
            android:textColor="@color/colorPrimaryText"
            android:text="Kontribusi"
            android:background="@color/colorPrimaryDark"
            android:linksClickable="true"
            android:onClick="goToKontribusi"
            android:layout_above="@+id/button_su"
            android:layout_alignLeft="@+id/button_su"
            android:layout_alignStart="@+id/button_su"></Button>


    </RelativeLayout>

</LinearLayout>
